Bug fix : for https://b.corp.google.com/issues/261271633
Change-Id: I22914997283f546d1bb1584150eab18367b80f1e

--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -257,7 +257,7 @@ service_accounts: [
   },
   {
     name: "longhorn-cloud-storage-{{ cluster_name }}",
-    id: "onghorn-cloud-storage",
+    id: "longhorn-cloud-storage",
     keyfile: longhorn-cloud-storage-creds.json,
     description: "Longhorn taking volume backups on cloud storage ",
     roles: [
