--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -40,6 +40,8 @@
   - external-secrets
 
 # Copy over the external secrets operator and CRD to all inventory
+# TODO: This does not look to be used
+# DEPRECATE
 - name: Copy External Secrets Operator and CRD files
   copy:
     src: "{{ item }}"
