--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -197,7 +197,7 @@
   - robin
 
 - name: Load tcm_loop kernel module
-  community.general.system.modprobe:
+  modprobe:
     name: tcm_loop
     state: present
   tags:
