--- a/all-verify.yml
+++ b/all-verify.yml
@@ -9,5 +9,12 @@
       name: decrypt-ssh-key
   - name: Gathering Facts
     setup: {}
+    tags:
+    - always
+  - name: Populate service facts
+    service_facts:
+    tags:
+    - always
   roles:
   - validate
+  vars: []
