--- a/roles/abm-install/tasks/main.yml
+++ b/roles/abm-install/tasks/main.yml
@@ -118,10 +118,10 @@
 
   - name: Download key files from secret manager locally
     shell: |
-      gcloud secrets versions access latest --secret="{{ item.name }}" >> {{ remote_gsa_key }}/{{ item.keyfile }}
+      gcloud secrets versions access latest --secret="{{ item.name }}" >> {{ remote_keys_folder }}/{{ item.keyfile }}
     args:
       executable: /bin/bash
-      creates: "{{ remote_gsa_key }}/{{ item.keyfile }}"
+      creates: "{{ remote_keys_folder }}/{{ item.keyfile }}"
     loop: "{{ service_accounts }}"
     tags:
     - abm-once
@@ -217,7 +217,7 @@
     args:
       chdir: "{{ abm_install_folder }}"
     environment:
-      GOOGLE_APPLICATION_CREDENTIALS: "{{ remote_gsa_key }}/gsa-key.json"
+      GOOGLE_APPLICATION_CREDENTIALS: "{{ remote_keys_folder }}/gsa-key.json"
     when:
       - primary_cluster_machine is defined
       - abm_installed.stat.exists == False
@@ -240,7 +240,7 @@
     async: 7200 # run for up to 60 minutes
     #poll: 30 # poll status every 30 seconds
     environment:
-      GOOGLE_APPLICATION_CREDENTIALS: "{{ remote_gsa_key }}/gsa-key.json"
+      GOOGLE_APPLICATION_CREDENTIALS: "{{ remote_keys_folder }}/gsa-key.json"
     tags:
     - abm-install
     - abm-create
@@ -256,7 +256,7 @@
     command:
       cmd: gcloud container hub memberships describe {{ cluster_name }} --format="value(name)" --project {{ google_project_id }}
     environment:
-      GOOGLE_APPLICATION_CREDENTIALS: "{{ remote_gsa_key }}/gsa-key.json"
+      GOOGLE_APPLICATION_CREDENTIALS: "{{ remote_keys_folder }}/gsa-key.json"
     tags:
     - abm-install
     - abm-verify-install
