--- a/roles/google-tools/tasks/main.yml
+++ b/roles/google-tools/tasks/main.yml
@@ -5,7 +5,7 @@
 ### The /etc/profile.d/gcloud_auth.sh requires it readable for all users
   - name: Create the temp keys directory
     file:
-      path: '{{ remote_gsa_key }}'
+      path: '{{ remote_keys_folder }}'
       state: directory
       mode: '0755'
       group: 'root'
@@ -18,7 +18,7 @@
   - name: Get the SA key to initialize gcloud with
     copy:
       src: '{{ local_gsa_key }}'
-      dest: '{{ remote_gsa_key }}/gsa-key.json'
+      dest: '{{ remote_keys_folder }}/gsa-key.json'
       mode: '0444' # read only
       group: 'root'
       owner: 'root'
@@ -120,7 +120,7 @@
   - name: Setting up Google App Creds for non-interactive shells
     lineinfile:
       path: /etc/environment
-      line: 'GOOGLE_APPLICATION_CREDENTIALS="{{ remote_gsa_key }}/gsa-key.json"'
+      line: 'GOOGLE_APPLICATION_CREDENTIALS="{{ remote_keys_folder }}/gsa-key.json"'
     tags:
     - profile
     - initial-install
@@ -152,7 +152,7 @@
   - name: Add gcloud BASH completion
     lineinfile:
       path: /etc/profile.d/gcloud_auth.sh
-      line: "gcloud auth activate-service-account --key-file={{ remote_gsa_key }}/gsa-key.json --project {{ google_project_id }}"
+      line: "gcloud auth activate-service-account --key-file={{ remote_keys_folder }}/gsa-key.json --project {{ google_project_id }}"
       state: present
       create: yes
     tags:
