better wait-retry for long waits and moving ExternalSecrts ClusterSecretStore to earlier provisioning stage
Change-Id: If4614d3f0db9fff09408fd2880e68440db2f53eb

--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -165,6 +165,11 @@ google_kms: {
     location: "global"
   }
 
+# Number of retry attempts on failed tasks using retry (600 seconds = approx 10 minutes max)
+default_retry_count: 60
+# Time to wait (seconds) between retries
+default_retry_delay: 10
+
 local_gsa_key: "{{ lookup('env', 'LOCAL_GSA_FILE') }}"
 tools_base_path: "/var/google-tools-install"
 
