--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -1,3 +1,7 @@
+###
+### This file runs after ExternalSecrets has been installed into the cluster
+###
+
 # TODO: Setup a conditional for idempotency (does this already exist?)
 - name: "Test for External Secrets secret"
   include_tasks: kubectl-presence.yml
@@ -8,12 +12,13 @@
     kubeconfig: "{{ kubeconfig_shared_location }}"
     fact_name: "has_es_secret"
   when:
-    - (primary_cluster_machine is defined)
-    - (primary_cluster_machine == true)
+  - (primary_cluster_machine is defined)
+  - (primary_cluster_machine == true)
   tags:
   - external-secrets-operator
   - external-secrets
 
+# TODO: Switch to Workload Identity
 - name: "Create secret for External Secrets"
   shell: |
     kubectl create ns external-secrets || true
@@ -23,9 +28,9 @@
   environment:
     KUBECONFIG: "{{ kubeconfig_shared_location }}"
   when:
-    - (primary_cluster_machine is defined)
-    - (primary_cluster_machine == true)
-    - (has_es_secret == false)
+  - (primary_cluster_machine is defined)
+  - (primary_cluster_machine == true)
+  - (has_es_secret == false)
   tags:
   - external-secrets-secret
   - external-secrets
@@ -39,28 +44,27 @@
   - external-secrets-operator
   - external-secrets
 
-# Copy over the external secrets operator and CRD to all inventory
-# TODO: This does not look to be used
-# DEPRECATE
-- name: Copy External Secrets Operator and CRD files
-  copy:
-    src: "{{ item }}"
-    dest: "{{ external_secrets_files }}"
-    mode: '0444' # read/write/execute owner, everyone else read/execute
-  with_fileglob: "external-secrets-c*.yaml"
-  tags:
-  - external-secrets-operator
-  - external-secrets
-
-## TODO: Move this to Pull repository?  Chicken/egg issue...no CRD, so cannot apply...SecretStore requires project ID to be injected (perhaps move to workload identity?)
+# This is applied in provisioning due to the Project being a part of the data
 - name: Copy Secrets Manager Store
   template:
     src: external-secrets-store.yaml.j2
     dest: "{{ external_secrets_files }}/external-secrets-store.yaml"
   when:
-    - (primary_cluster_machine is defined)
-    - (primary_cluster_machine == true)
+  - (primary_cluster_machine is defined)
+  - (primary_cluster_machine == true)
   tags:
   - external-secrets
   - external-secrets-store
 
+- name: "Add ClusterSecretStore (specific to this cluster)"
+  command:
+    cmd: "kubectl apply -f {{ external_secrets_files }}/external-secrets-store.yaml"
+  retries: "{{ default_retry_count }}"
+  delay: "{{ default_retry_delay }}"
+  register: cscresult
+  until: cscresult.rc == 0
+  environment:
+    KUBECONFIG: "{{ kubeconfig_shared_location }}"
+  when:
+    - (primary_cluster_machine is defined)
+    - (primary_cluster_machine == true)
