--- a/roles/ready-ubuntu/tasks/setup-docker-apt.yml
+++ b/roles/ready-ubuntu/tasks/setup-docker-apt.yml
@@ -41,8 +41,8 @@
     state: started
   register: task_result
   until: task_result is succeeded
-  retries: 10
-  delay: 5
+  retries: "{{ default_retry_count }}"
+  delay: "{{ default_retry_delay }}"
 
 - name: Get Docker version
   command: docker version
