adding check for length of GSA names and GCP project
Change-Id: I7605193cb11b6d33110355870ae2cab3b9fe94c7
Bug-Id: 262241706

--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -210,9 +210,11 @@ vlan_interfaces: []
 install_observability: false
 
 # All of the Service Accounts used in this solution
+# NOTE: IDs are used in cluster-config.yaml.j2 for Ansible to identify the specific service accounts.
+#       Do not change the ID. The name is independent of the ID or the filename.
 service_accounts: [
   {
-    name: "abm-gcr-agent-{{ cluster_name }}",
+    name: "abm-gcr-{{ cluster_name }}",
     id: "abm-gcr-agent",
     keyfile: abm-gcr-agent-creds.json,
     description: "ABM GCR Agent Account",
@@ -221,7 +223,7 @@ service_accounts: [
     ]
   },
   {
-    name: "abm-gke-connect-agent-{{ cluster_name }}",
+    name: "abm-gke-con-{{ cluster_name }}",
     id: "abm-gke-connect-agent",
     keyfile: abm-gke-connect-agent-creds.json,
     description: "ABM GKE Connect Agent Service Account",
@@ -230,7 +232,7 @@ service_accounts: [
     ]
   },
   {
-    name: "abm-gke-register-agent-{{ cluster_name }}",
+    name: "abm-gke-reg-{{ cluster_name }}",
     id: "abm-gke-register-agent",
     keyfile: abm-gke-register-agent-creds.json,
     description: "ABM GKE Connect Register Account",
@@ -239,7 +241,7 @@ service_accounts: [
     ]
   },
   {
-    name: "acm-monitoring-agent-{{ cluster_name }}",
+    name: "acm-mon-{{ cluster_name }}",
     id: "acm-monitoring-agent",
     keyfile: acm-monitoring-agent.json,
     description: "ACM Monitoring Account",
@@ -248,7 +250,7 @@ service_accounts: [
     ]
   },
   {
-    name: "abm-ops-agent-{{ cluster_name }}",
+    name: "abm-ops-{{ cluster_name }}",
     id: "abm-ops-agent",
     keyfile: abm-cloud-operations-agent-creds.json,
     description: "ABM Cloud Operations Service Account",
@@ -261,7 +263,7 @@ service_accounts: [
     ]
   },
   {
-    name: "external-secrets-k8s-{{ cluster_name }}",
+    name: "es-k8s-{{ cluster_name }}",
     id: "external-secrets-k8s",
     keyfile: external-secrets-k8s-creds.json,
     description: "External Secrets Service Account",
@@ -272,7 +274,7 @@ service_accounts: [
   },
   #####  SDS agent for backups (storage provider used is identified in the description)
   {
-    name: "sds-backup-agent-{{ cluster_name }}",
+    name: "sds-backup-{{ cluster_name }}",
     id: "sds-backup-agent",
     keyfile: sds-backup-agent-creds.json,
     description: "SDS agent taking volume backups on cloud storage ({{ storage_provider }})",
@@ -281,7 +283,7 @@ service_accounts: [
     ]
   },
   {
-    name: "gateway-connect-agent-{{ cluster_name }}",
+    name: "gtw-con-{{ cluster_name }}",
     id: "gateway-connect-agent",
     keyfile: gateway-connect-agent-creds.json,
     description: "Agent used for Gateway Connect",
@@ -291,7 +293,7 @@ service_accounts: [
     ]
   },
   {
-    name: "source-repo-agent-{{ cluster_name }}",
+    name: "src-repo-{{ cluster_name }}",
     id: "source-repo-agent",
     keyfile: google-source-repo-agent.json,
     description: "Agent used for GSR",
@@ -300,7 +302,7 @@ service_accounts: [
     ]
   },
   {
-    name: "cdi-import-agent-{{ cluster_name }}",
+    name: "cdi-import-{{ cluster_name }}",
     id: "cdi-import-agent",
     keyfile: cdi-import-agent-creds.json,
     description: "Agent used for CDI image access",
@@ -309,7 +311,7 @@ service_accounts: [
     ]
   },
   {
-    name: "storage-agent-{{ cluster_name }}",
+    name: "storage-{{ cluster_name }}",
     id: "storage-agent",
     keyfile: storage-agent-svc-account-creds.json,
     description: "Agent used for Snapshot Cloud Storage",
@@ -319,6 +321,8 @@ service_accounts: [
   }
 
 ]
+
+longest_gca_name: 12 # count the length of the names above without the {{cluster_name}}
 
 # git_creds_gcp_secret_name is the secret created to hold the Git PAT info corresponding to that Namespace Repo
 # franchise_name, franchise_number aren't used
