Setting storage admin permissions instead of objectAdmin
Change-Id: Ifefad560a2e26eb6c9aa6a6ef2ff1f6402c4f4c7

--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -279,7 +279,7 @@ service_accounts: [
     keyfile: sds-backup-agent-creds.json,
     description: "SDS agent taking volume backups on cloud storage ({{ storage_provider }})",
     roles: [
-      "roles/storage.objectAdmin"
+      "roles/storage.admin"
     ]
   },
   {
