--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -125,8 +125,8 @@ storage_provider: "robin" # Current Options: longhorn, none & Future Options: op
 storage_provider_repo_url: "{{ lookup('env', 'SDS_REPO_URL') | default('https://gitlab.com/gcp-solutions-public/retail-edge/available-cluster-traits/robin-io-anthos.git', True) }}"
 storage_provider_repo_type: "{{ lookup('env', 'SDS_REPO_STRUCTURE') | default('hierarchy', True) }}"
 storage_provider_auth_type: "{{ lookup('env', 'SDS_REPO_TYPE') | default('token', True) }}" # NOTE: Initial feature functionality can ONLY support token
-storage_provider_user_user: "{{ lookup('env', 'SDS_TOKEN_USER') | default({{ scm_token_user }}, True) }}"
-storage_provider_user_token: "{{ lookup('env', 'SDS_TOKEN_TOKEN') | default({{ scm_token_token }}, True) }}"
+storage_provider_user_user: "{{ lookup('env', 'SDS_TOKEN_USER') | default(scm_token_user, True) }}"
+storage_provider_user_token: "{{ lookup('env', 'SDS_TOKEN_TOKEN') | default(scm_token_token, True) }}"
 storage_provider_auth_secret: "{{storage_provider}}-git-cred" # GCP Secret Manager secret will be created with this name using the name/token above
 
 # Storage provider backup bucket (where PVs are backed up to)
